fix(style): improve readability of the calendar

--- a/src/app/home/modules/schedule/components/schedule-item/schedule-item.component.scss
+++ b/src/app/home/modules/schedule/components/schedule-item/schedule-item.component.scss
@@ -21,7 +21,7 @@
 		flex-direction: column;
 
 		h3 {
-			font-weight: 100;
+			font-weight: 400;
 			font-size: 16px;
 			padding: 0;
 			margin: 0;
@@ -33,7 +33,7 @@
 		}
 
 		&.talk {
-			background-color: #f9df51;
+			background-color: #f9e051;
 		}
 
 		&.break, &.lunch {
@@ -64,7 +64,7 @@
 
 		span {
 			margin-left: 5px;
-			font-weight: 100;
+			font-weight: 400;
 			font-size: 12px;
 		}
 	}
